# python

./: .gitignore  CHANGELOG.md  CNAME  README.md  build.py  catppuccin.py  example_plots.py  palette.json  pyproject.toml  release-please-config.json
.github/: release-please-config.json
.github/workflows/: ci.yaml  gh-pages.yaml  lint.yaml  palette.yml  publish.yaml  release-please.yaml  test.yaml
catppuccin/: __init__.py  color.py  colour.py  flavor.py  flavour.py  hsl.py  models.py  palette.py
catppuccin/extras/: __init__.py  matplotlib.py  pygments.py  rich_ctp.py
catppuccin/extras/matplotlib_styles/: _catppuccin_template.txt  frappe.mplstyle  latte.mplstyle  macchiato.mplstyle  mocha.mplstyle
docs/: catppuccin.html  index.html  search.js
docs/catppuccin/: extras.html  models.html  palette.html
docs/catppuccin/extras/: matplotlib.html  pygments.html  rich_ctp.html
pdoc/: syntax-highlighting.css  theme.css
pygments/: catppuccin-frappe.css  catppuccin-frappe.important.css  catppuccin-latte.css  catppuccin-latte.important.css  catppuccin-macchiato.css  catppuccin-macchiato.important.css  catppuccin-mocha.css  catppuccin-mocha.important.css  catppuccin-variables.css  catppuccin-variables.important.css  ctp-frappe.css  ctp-latte.css  ctp-macchiato.css  ctp-mocha.css  ctp-variable.css
scripts/: build-gh-pages
tests/: __init__.py  conftest.py  test_catppuccin.py  test_color.py  test_colour.py  test_flavor.py  test_flavour.py  test_hsl.py  test_matplotlib.py  test_pygments.py  test_rich.py
