[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "catppuccin"
version = "0.0.0"
description = "🐍 Soothing pastel theme for Python."
authors = ["backwardspy <backwardspy@pigeon.life>"]
readme = "README.md"

[tool.poetry.plugins."pygments.styles"]
catppuccin-latte = "catppuccin.extras.pygments:LatteStyle"
catppuccin-frappe = "catppuccin.extras.pygments:FrappeStyle"
catppuccin-macchiato = "catppuccin.extras.pygments:MacchiatoStyle"
catppuccin-mocha = "catppuccin.extras.pygments:MochaStyle"

[tool.poetry.dependencies]
python = "^3.8.0"
pygments = { version = "^2.17.2", optional = true }
rich = { version = "^13.7.0", optional = true }
tinycss2 = { version = "^1.2.1", optional = true }

[tool.poetry.extras]
pygments = ["pygments"]
rich = ["rich"]
gh-pages = ["tinycss2"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
types-pygments = "^2.17.0.20240106"
types-colorama = "^0.4.15.20240205"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",   # one-blank-line-before class, incompatible with D211
  "D213",   # multi-line-summary-second-line, incompatible with D212
  "ANN101", # missing-type-self, deprecated
  "ANN102", # missing-type-cls, deprecated
  "ISC001", # single-line-implicit-string-concatenation, incompatible with formatter
  "COM812", # missing-trailing-comma, incompatible with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [
  "D100",    # undocumented-public-module
  "D103",    # undocumented-public-function
  "S101",    # assert
  "PLR2004", # magic-value-comparison
]

[tool.mypy]
strict = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
